--- a/tests/Asm89/Twig/Lint/Test/Fixtures/undefined_test.twig
+++ b/tests/Asm89/Twig/Lint/Test/Fixtures/undefined_test.twig
@@ -5,3 +5,7 @@
 {% if foo is some_undefined_test_with_args(bar) %}
     {{ foo }}
 {% endif %}
+
+{% if monkey is parent of(human) %}
+    {{ foo }}
+{% endif %}
